--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "mysql2": "^2.3.2",
     "node": "^16.11.1"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "jest": "^27.3.1"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest",
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
@@ -22,5 +25,6 @@
   "bugs": {
     "url": "https://github.com/BTantillo/u-develop-it/issues"
   },
-  "homepage": "https://github.com/BTantillo/u-develop-it#readme"
+  "homepage": "https://github.com/BTantillo/u-develop-it#readme",
+  "keywords": []
 }
